functions refactoring